# autorpg

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.claude/: launch.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  saves.rs  settings.rs
src-tauri/src/ai/: client.rs  mod.rs  parser.rs
src-tauri/src/commands/: executor.rs  mod.rs
src-tauri/src/engine/: character.rs  combat.rs  currency.rs  dice.rs  game_state.rs  inventory.rs  map.rs  memory.rs  mod.rs  quest.rs  relations.rs
src/lib/components/: CharacterCreationModal.svelte  CharacterPanel.svelte  CombatInterface.svelte  CombatPanel.svelte  InputBar.svelte  InventoryPanel.svelte  NotificationToast.svelte  QuestLog.svelte  SaveLoadModal.svelte  SettingsModal.svelte  StoryLog.svelte
src/lib/stores/: gameStore.ts  notificationStore.ts  themeStore.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
